kubernetes/model-service.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: model-service
  labels:
    app: model-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: model-service
  template:
    metadata:
      labels:
        app: model-service
    spec:
      containers:
        - name: model-service
          image: ghcr.io/remla24-team7/model-service:0.1.2
          ports:
            - containerPort: 5000
          volumeMounts:
            - name: vagrant-synced-folder
              subPath: model
              mountPath: /app/model
      volumes:
        - name: vagrant-synced-folder
          hostPath:
            path: /vagrant
            type: Directory
      nodeSelector:
        kubernetes.io/hostname: node2
---
apiVersion: v1
kind: Service
metadata:
  name: model-service
spec:
  selector:
    app: model-service
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
  type: ClusterIP
